[gd_scene load_steps=4 format=2]

[ext_resource path="res://res/gwarek_budynek_a_res.jpg" type="Texture" id=1]
[ext_resource path="res://res/MenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.6
margin_right = 40.0
margin_bottom = 40.0

[node name="ButtonPlywanie" type="Button" parent="VBoxContainer"]
margin_right = 552.0
margin_bottom = 83.0
text = "Pływanie"

[node name="ButtonUciekanie" type="Button" parent="VBoxContainer"]
margin_top = 87.0
margin_right = 552.0
margin_bottom = 170.0
text = "Uciekanie"

[node name="ButtonJezdzenie" type="Button" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 552.0
margin_bottom = 257.0
text = "Jeżdżenie"

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
centered = false

[connection signal="pressed" from="VBoxContainer/ButtonPlywanie" to="." method="_on_ButtonPlywanie_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonUciekanie" to="." method="_on_ButtonUciekanie_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonJezdzenie" to="." method="_on_ButtonJezdzenie_pressed"]
